[metadata]
name = plotter
version = 0.0.1
author = James Ball
description = Plot live data
long_description = file: README.md
classifiers =
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9    
project_urls =
    homepage = https://github.com/jmball/plotter

[options]
packages = find:
include_package_data = True
install_requires =
    dash
    numpy
    scipy
    numpy
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
plotter = assets/stylesheet.css

[options.entry_points]
console_scripts =
    mppt-plotter = plotter.mppt_plotter:main
